--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -16,10 +16,11 @@
 	</tr>
 </table>
 
+<button id="save" onclick = "saveGame()" data-id=''>Save Game</button>
+<button id="previous" onclick="previousGames()">Show Previous Games</button>
+<button id="clear" onclick = "resetBoard()">Clear Current Game</button>
+
 <div id="games"></div>
 
 <div id="message"></div>
 
-<button id="save">Save Game</button>
-<button id="previous">Show Previous Games</button>
-<button id="clear">Clear Current Game</button>
